--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
+  "homepage": "https://Angeallain.github.io/my-portfolio_v_1.0",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
@@ -39,7 +40,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+
 }
